# trepo-analytics

./: .dockerignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
src/tuni_scraper/: __main__.py  cli.py  config.py  database.py  llm_rating.py  models.py  parsing.py  reports.py  scraper.py  web.py  wsgi.py
src/tuni_scraper/templates/: index.html
tests/: test_database.py  test_parsing.py  test_scraper.py
