[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuni-msc-downloads-counts-scraper"
version = "0.1.0"
description = "Scrape TUNI TREPO recent submissions and analyze download counts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "Flask",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
trepo-scraper = "tuni_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tuni_scraper = ["templates/*.html"]